--- a/src/platform/qt/GamePakView.ui
+++ b/src/platform/qt/GamePakView.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>259</width>
-    <height>373</height>
+    <width>251</width>
+    <height>391</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -39,15 +39,12 @@
       <item row="2" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Sensors</string>
+         <string>Hardware</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QCheckBox" name="sensorAutodetect">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
+       <widget class="QCheckBox" name="hwAutodetect">
         <property name="text">
          <string>Autodetect</string>
         </property>
@@ -57,7 +54,7 @@
        </widget>
       </item>
       <item row="3" column="1">
-       <widget class="QCheckBox" name="sensorRTC">
+       <widget class="QCheckBox" name="hwRTC">
         <property name="enabled">
          <bool>false</bool>
         </property>
@@ -67,7 +64,7 @@
        </widget>
       </item>
       <item row="4" column="1">
-       <widget class="QCheckBox" name="sensorGyro">
+       <widget class="QCheckBox" name="hwGyro">
         <property name="enabled">
          <bool>false</bool>
         </property>
@@ -77,7 +74,7 @@
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QCheckBox" name="sensorTilt">
+       <widget class="QCheckBox" name="hwTilt">
         <property name="enabled">
          <bool>false</bool>
         </property>
@@ -87,7 +84,7 @@
        </widget>
       </item>
       <item row="6" column="1">
-       <widget class="QCheckBox" name="sensorLight">
+       <widget class="QCheckBox" name="hwLight">
         <property name="enabled">
          <bool>false</bool>
         </property>
@@ -134,6 +131,16 @@
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Save type</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="1">
+       <widget class="QCheckBox" name="hwRumble">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Rumble</string>
         </property>
        </widget>
       </item>
