Qt: Saving of game overrides

--- a/src/platform/qt/GamePakView.ui
+++ b/src/platform/qt/GamePakView.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>251</width>
-    <height>391</height>
+    <height>433</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -29,6 +29,47 @@
       <property name="fieldGrowthPolicy">
        <enum>QFormLayout::FieldsStayAtSizeHint</enum>
       </property>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Save type</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="savetype">
+        <item>
+         <property name="text">
+          <string>Autodetect</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>None</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>SRAM</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Flash 512kb</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Flash 1Mb</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>EEPROM</string>
+         </property>
+        </item>
+       </widget>
+      </item>
       <item row="1" column="0" colspan="2">
        <widget class="Line" name="line">
         <property name="orientation">
@@ -93,47 +134,6 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="savetype">
-        <item>
-         <property name="text">
-          <string>Autodetect</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>None</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>SRAM</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Flash 512kb</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Flash 1Mb</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>EEPROM</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Save type</string>
-        </property>
-       </widget>
-      </item>
       <item row="7" column="1">
        <widget class="QCheckBox" name="hwRumble">
         <property name="enabled">
@@ -143,6 +143,46 @@
          <string>Rumble</string>
         </property>
        </widget>
+      </item>
+      <item row="8" column="0" colspan="2">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="save">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Save overrides</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
