Qt: Split out sensor editor from override view

--- a/src/platform/qt/GamePakView.ui
+++ b/src/platform/qt/GamePakView.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>251</width>
-    <height>433</height>
+    <width>409</width>
+    <height>198</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,15 +19,15 @@
   <property name="windowTitle">
    <string>Game Pak Overrides</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
-   <item>
-    <widget class="QGroupBox" name="groupBox">
+  <layout class="QGridLayout" name="gridLayout_3">
+   <item row="0" column="1">
+    <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
       <string/>
      </property>
-     <layout class="QFormLayout" name="formLayout">
+     <layout class="QFormLayout" name="formLayout_5">
       <property name="fieldGrowthPolicy">
-       <enum>QFormLayout::FieldsStayAtSizeHint</enum>
+       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
       </property>
       <item row="0" column="0">
        <widget class="QLabel" name="label">
@@ -70,6 +70,35 @@
         </item>
        </widget>
       </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Idle loop</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QComboBox" name="idleOptimization">
+        <item>
+         <property name="text">
+          <string>Run</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Optimize</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Detect</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QLineEdit" name="idleLoop"/>
+      </item>
       <item row="1" column="0" colspan="2">
        <widget class="Line" name="line">
         <property name="orientation">
@@ -77,14 +106,16 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Hardware</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
+     </layout>
+    </widget>
+   </item>
+   <item row="0" column="0" rowspan="2">
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string/>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
        <widget class="QCheckBox" name="hwAutodetect">
         <property name="text">
          <string>Autodetect</string>
@@ -94,17 +125,17 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item>
        <widget class="QCheckBox" name="hwRTC">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
-         <string>Realtime Clock</string>
+         <string>Realtime clock</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item>
        <widget class="QCheckBox" name="hwGyro">
         <property name="enabled">
          <bool>false</bool>
@@ -114,7 +145,7 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
+      <item>
        <widget class="QCheckBox" name="hwTilt">
         <property name="enabled">
          <bool>false</bool>
@@ -124,7 +155,7 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="1">
+      <item>
        <widget class="QCheckBox" name="hwLight">
         <property name="enabled">
          <bool>false</bool>
@@ -134,7 +165,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="1">
+      <item>
        <widget class="QCheckBox" name="hwRumble">
         <property name="enabled">
          <bool>false</bool>
@@ -144,175 +175,38 @@
         </property>
        </widget>
       </item>
-      <item row="8" column="0" colspan="2">
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item>
-         <spacer name="horizontalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="QPushButton" name="save">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="text">
-           <string>Save overrides</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-       </layout>
-      </item>
      </layout>
     </widget>
    </item>
-   <item>
-    <widget class="QTabWidget" name="tabWidget">
-     <property name="currentIndex">
-      <number>0</number>
-     </property>
-     <widget class="QWidget" name="tab_3">
-      <attribute name="title">
-       <string>RTC</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="2" column="0">
-        <widget class="QRadioButton" name="timeFakeEpoch">
-         <property name="text">
-          <string>Start time at</string>
-         </property>
-         <attribute name="buttonGroup">
-          <string notr="true">timeButtons</string>
-         </attribute>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QRadioButton" name="timeNoOverride">
-         <property name="text">
-          <string>System time</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
-         </property>
-         <attribute name="buttonGroup">
-          <string notr="true">timeButtons</string>
-         </attribute>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QRadioButton" name="timeFixed">
-         <property name="text">
-          <string>Fixed time</string>
-         </property>
-         <attribute name="buttonGroup">
-          <string notr="true">timeButtons</string>
-         </attribute>
-        </widget>
-       </item>
-       <item row="3" column="0" colspan="2">
-        <widget class="QDateTimeEdit" name="time">
-         <property name="wrapping">
-          <bool>true</bool>
-         </property>
-         <property name="maximumDate">
-          <date>
-           <year>2099</year>
-           <month>12</month>
-           <day>31</day>
-          </date>
-         </property>
-         <property name="minimumDate">
-          <date>
-           <year>2000</year>
-           <month>1</month>
-           <day>1</day>
-          </date>
-         </property>
-         <property name="currentSection">
-          <enum>QDateTimeEdit::MonthSection</enum>
-         </property>
-         <property name="displayFormat">
-          <string>MM/dd/yy hh:mm:ss AP</string>
-         </property>
-         <property name="timeSpec">
-          <enum>Qt::UTC</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" rowspan="3" alignment="Qt::AlignBottom">
-        <widget class="QPushButton" name="timeNow">
-         <property name="text">
-          <string>Now</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="tab_6">
-      <attribute name="title">
-       <string>Light</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="1">
-        <widget class="QSpinBox" name="lightSpin">
-         <property name="maximum">
-          <number>255</number>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Brightness</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0" colspan="2">
-        <widget class="QSlider" name="lightSlide">
-         <property name="maximum">
-          <number>255</number>
-         </property>
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="tickPosition">
-          <enum>QSlider::TicksBelow</enum>
-         </property>
-         <property name="tickInterval">
-          <number>16</number>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </widget>
+   <item row="1" column="1">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="save">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Save overrides</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
  <resources/>
  <connections/>
- <buttongroups>
-  <buttongroup name="timeButtons"/>
- </buttongroups>
 </ui>
