--- a/src/platform/qt/SettingsView.ui
+++ b/src/platform/qt/SettingsView.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>350</width>
+    <width>355</width>
     <height>501</height>
    </rect>
   </property>
@@ -325,6 +325,39 @@
         </widget>
        </item>
       </layout>
+     </item>
+     <item row="17" column="1">
+      <widget class="QComboBox" name="idleOptimization">
+       <item>
+        <property name="text">
+         <string>Run all</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Remove known</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Detect and remove</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="16" column="0" colspan="2">
+      <widget class="Line" name="line_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="17" column="0">
+      <widget class="QLabel" name="label_15">
+       <property name="text">
+        <string>Idle loops</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
