Qt: Display hex values within cheats

--- a/src/platform/qt/CheatsView.ui
+++ b/src/platform/qt/CheatsView.ui
@@ -94,6 +94,9 @@
      <property name="defaultDropAction">
       <enum>Qt::MoveAction</enum>
      </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::ExtendedSelection</enum>
+     </property>
      <property name="headerHidden">
       <bool>true</bool>
      </property>
