--- a/src/platform/qt/SettingsView.ui
+++ b/src/platform/qt/SettingsView.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>360</width>
-    <height>569</height>
+    <width>374</width>
+    <height>608</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -146,13 +146,54 @@
       </layout>
      </item>
      <item row="6" column="0">
+      <widget class="QLabel" name="label_16">
+       <property name="text">
+        <string>Volume:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <item>
+        <widget class="QSlider" name="volume">
+         <property name="maximum">
+          <number>256</number>
+         </property>
+         <property name="pageStep">
+          <number>16</number>
+         </property>
+         <property name="value">
+          <number>256</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="mute">
+         <property name="text">
+          <string>Mute</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="7" column="0" colspan="2">
+      <widget class="Line" name="line">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Sync:</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="8" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_10">
        <item>
         <widget class="QCheckBox" name="videoSync">
@@ -170,14 +211,14 @@
        </item>
       </layout>
      </item>
-     <item row="7" column="0">
+     <item row="9" column="0">
       <widget class="QLabel" name="label_9">
        <property name="text">
         <string>Frameskip:</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="9" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_16">
        <item>
         <widget class="QLabel" name="label_12">
@@ -198,14 +239,14 @@
        </item>
       </layout>
      </item>
-     <item row="8" column="0">
+     <item row="10" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>FPS target:</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
+     <item row="10" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QSpinBox" name="fpsTarget">
@@ -226,49 +267,42 @@
        </item>
       </layout>
      </item>
-     <item row="9" column="0" colspan="2">
-      <widget class="Line" name="line">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="10" column="1">
+     <item row="11" column="1">
       <widget class="QCheckBox" name="lockAspectRatio">
        <property name="text">
         <string>Lock aspect ratio</string>
        </property>
       </widget>
      </item>
-     <item row="11" column="1">
+     <item row="12" column="1">
       <widget class="QCheckBox" name="resampleVideo">
        <property name="text">
         <string>Resample video</string>
        </property>
       </widget>
      </item>
-     <item row="12" column="0" colspan="2">
+     <item row="13" column="0" colspan="2">
       <widget class="Line" name="line_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="13" column="1">
+     <item row="14" column="1">
       <widget class="QCheckBox" name="rewind">
        <property name="text">
         <string>Enable rewind</string>
        </property>
       </widget>
      </item>
-     <item row="14" column="0">
+     <item row="15" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
         <string>Rewind interval:</string>
        </property>
       </widget>
      </item>
-     <item row="14" column="1">
+     <item row="15" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_12">
        <item>
         <widget class="QLabel" name="label_5">
@@ -289,14 +323,14 @@
        </item>
       </layout>
      </item>
-     <item row="15" column="0">
+     <item row="16" column="0">
       <widget class="QLabel" name="label_8">
        <property name="text">
         <string>Rewind length:</string>
        </property>
       </widget>
      </item>
-     <item row="15" column="1">
+     <item row="16" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_13">
        <item>
         <widget class="QSpinBox" name="rewindCapacity"/>
@@ -310,21 +344,28 @@
        </item>
       </layout>
      </item>
-     <item row="17" column="0" colspan="2">
+     <item row="17" column="1">
+      <widget class="QCheckBox" name="allowOpposingDirections">
+       <property name="text">
+        <string>Allow opposing input directions</string>
+       </property>
+      </widget>
+     </item>
+     <item row="18" column="0" colspan="2">
       <widget class="Line" name="line_4">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="18" column="0">
+     <item row="19" column="0">
       <widget class="QLabel" name="label_15">
        <property name="text">
         <string>Idle loops</string>
        </property>
       </widget>
      </item>
-     <item row="18" column="1">
+     <item row="19" column="1">
       <widget class="QComboBox" name="idleOptimization">
        <item>
         <property name="text">
@@ -341,13 +382,6 @@
          <string>Detect and remove</string>
         </property>
        </item>
-      </widget>
-     </item>
-     <item row="16" column="1">
-      <widget class="QCheckBox" name="allowOpposingDirections">
-       <property name="text">
-        <string>Allow opposing input directions</string>
-       </property>
       </widget>
      </item>
     </layout>
